# docassemble-ALKilnInThePlayground

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/ALKilnInThePlayground/data/questions/: alkip_dashboard.yml  alkip_dashboard_tools.yml  artifacts.yml  background_actions_alkip.yml  background_actions_wrappers.yml  files.yml  generate.yml  headers.yml  logs.yml  process_helpers.yml  resets.yml  resets_standalone.yml  run_alkiln_tests.yml  validate.yml
docassemble/ALKilnInThePlayground/data/sources/: install_global_npm_package.sh  uninstall_global_npm_package.sh
docassemble/ALKilnInThePlayground/data/static/: accordion_collapse_nav.js  alkiln_copy_button.css  alkiln_copy_button.js  alkiln_notifications.js  alkiln_playground.css  alkip_dangerous_actions.css  alkip_dashboard.css  alkip_resets.css  dynamic_css_vars.js  fidget.css  install_alkiln.sh  nav_bar_based_css.js  uninstall_alkiln.sh
