[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ALKilnInThePlayground"
version = "1.5.0"
description = "Run ALKiln automated tests on your server, no GitHub account required. Made in collaboration with the SuffolkLITLab Document Assembly Line project."
readme = "README.md"
authors = [
    { name = "plocket", email = "52798256+plocket@users.noreply.github.com" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://assemblyline.suffolklitlab.org/docs/components/ALKiln/setup/#diy-details"

[tool.setuptools.packages.find]
where = [
    ".",
]
